# industrial-defect-diffusion

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: categories.json  final_experiments.json
docs/: deployment-notes.md  environment-setup.md  final-project-summary.md  interview-talking-points.md  project-card.md  stage-01-data-exploration.md  stage-02-traditional-synthesis.md  stage-03-diffusion-generation.md  stage-04-patchcore-baseline.md  stage-05-unet-segmentation.md  stage-06-expanded-synthesis-and-filtering.md  stage-07-crack-improvement-and-final-analysis.md  stage-08-wood-generalization.md  stage-09-wood-scratch-fix.md  stage-10-leather-generalization.md  stage-11-leather-precision-cut-fix.md  stage-12-leather-fold-fix.md  stage-14-engineering-reproducibility.md  stage-15-open-source-health-checks.md  stage-16-final-visuals-and-paper-tables.md  stage-17-diagnostic-evidence-and-ablation-summary.md  stage-18-inference-demo-and-deployment-notes.md  stage-19-model-code-refactor.md
scripts/: 01_explore_dataset.py  02_generate_traditional_defects.py  03_generate_diffusion_defects.py  04_patchcore_baseline.py  05_train_unet_segmentation.py  06_filter_synthetic_quality.py  07_analyze_crack_distribution.py  08_run_wood_generalization.py  09_analyze_wood_scratch_distribution.py  09_prepare_wood_scratch_fix_dataset.py  10_run_leather_generalization.py  11_analyze_leather_cut_distribution.py  11_prepare_leather_cut_fix_dataset.py  12_analyze_leather_fold_distribution.py  12_prepare_leather_fold_fix_dataset.py  13_collect_final_results.py  (+6 more)
(+319 files in other folders)
