[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-defect-diffusion"
version = "0.1.0"
description = "Synthetic industrial defect generation and real-test segmentation validation."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
